<resources>
    <string name="app_name">UlMoTo</string>
    <string name="label_first_name">Meno</string>
    <string name="label_last_name">Priezvisko</string>
    <string name="label_licence_plate">EČV</string>
    <string name="label_add_record_title">Pridanie záznamu</string>
    <string name="label_number_of_records">"Počet výsledkov: "</string>
    <string name="label_no_records">Žiadne výsledky</string>
    <string name="label_search_record_title">Vyhľadanie záznamu</string>
    <string name="label_add_record">Pridaj záznam</string>
    <string name="label_choose_image">Vyber obrázok</string>
    <string name="label_reload">Znovu načítať</string>
    <string name="label_detail">Detail</string>
    <string name="label_search">Vyhľadaj</string>
    <string name="label_capture_photo">Nasnímať</string>
    <string name="label_add_repair_record_title">Pridanie záznamu o oprave</string>
    <string name="label_repair_description">Popis</string>
    <string name="label_repair_price">Suma</string>
    <string name="label_add_repair_record">Pridať záznam o oprave</string>
    <string name="label_detail_title">Detail záznamu</string>
    <string name="label_total_price">Celková suma opráv</string>
    <string name="label_repair_list">Zoznam opráv</string>
    <string name="label_add_repair">Pridaj opravu</string>
    <string name="label_registration_book_front">TP predná strana</string>
    <string name="label_registration_book_back">TP zadná strana</string>
    <string name="label_repair_date">Dátum opravy</string>

    <string name="title_choose_image_provider">Načítanie fotografie</string>
    <string name="action_cancel">Zrušiť</string>
    <string name="title_gallery">Galéria</string>
    <string name="title_camera">Kamera</string>

    <string name="uwmediapicker_toolbar_title_image_library">Fotografie</string>
    <string name="uwmediapicker_toolbar_done">Dokončiť</string>
</resources>
