<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Title.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_search_record_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15sp"
                android:orientation="vertical">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup_search_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:checkedChip="@+id/chip_search_licence_plate"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_search_first_name"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="50sp"
                        android:gravity="center"
                        android:text="@string/label_first_name"
                        android:textAlignment="center" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_search_last_name"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="50sp"
                        android:gravity="center"
                        android:text="@string/label_last_name"
                        android:textAlignment="center" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_search_licence_plate"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="50sp"
                        android:gravity="center"
                        android:text="@string/label_licence_plate"
                        android:textAlignment="center" />
                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_search_filter"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:gravity="center" />

                <Button
                    android:id="@+id/button_search"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:gravity="center"
                    android:text="@string/label_search" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView_search_results_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_number_of_records" />

        <TextView
            android:id="@+id/textView_search_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:gravity="center"
            android:text="@string/label_no_records"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ListView
            android:id="@+id/listView_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp" />
    </LinearLayout>
</ScrollView>