<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            style="@style/TextView.Title.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_detail_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15sp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView.Title.H3"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:gravity="center"
                    android:text="@string/label_first_name"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextView.Title.H3"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/label_last_name" />

                <TextView
                    style="@style/TextView.Title.H3"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/label_licence_plate" />

                <TextView
                    style="@style/TextView.Title.H3"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text="@string/label_total_price" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_detail_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/textView_detail_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/textView_detail_licence_plate"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/textView_detail_price_count"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageView_detail_first"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageView_detail_second"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@null" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Title.H2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/label_repair_list" />

            <Button
                android:id="@+id/button_detail_add_repair"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/label_add_repair" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_detail_no_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_no_records"
            android:visibility="gone" />

        <ListView
            android:id="@+id/listView_detail_repairs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp" />
    </LinearLayout>
</ScrollView>