<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <TextView
            android:id="@+id/linearLayout2"
            style="@style/TextView.Title.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add_record_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            style="@style/TextView.Title.H3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_first_name"
            app:layout_constraintBottom_toBottomOf="@+id/editText_add_first_name"
            app:layout_constraintEnd_toStartOf="@+id/editText_add_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editText_add_first_name"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="36dp" />

        <TextView
            android:id="@+id/textView11"
            style="@style/TextView.Title.H3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_last_name"
            app:layout_constraintBottom_toBottomOf="@+id/editText_add_last_name"
            app:layout_constraintEnd_toStartOf="@+id/editText_add_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editText_add_last_name"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="67dp" />

        <TextView
            android:id="@+id/textView14"
            style="@style/TextView.Title.H3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_licence_plate"
            app:layout_constraintBottom_toBottomOf="@+id/editText_add_licence_plate"
            app:layout_constraintEnd_toStartOf="@+id/editText_add_licence_plate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editText_add_licence_plate"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="26dp" />

        <TextView
            android:id="@+id/tvTel"
            style="@style/TextView.Title.H3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="Tel. č."
            app:layout_constraintBottom_toBottomOf="@+id/etTelephone"
            app:layout_constraintEnd_toStartOf="@+id/editText_add_licence_plate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etTelephone"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="26dp" />

        <EditText
            android:id="@+id/editText_add_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <EditText
            android:id="@+id/editText_add_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_first_name" />

        <ru.kolotnev.formattedittext.MaskedEditText
            android:id="@+id/editText_add_licence_plate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_last_name"
            app:mask="AA-*****"
            app:placeholder="_" />

        <ru.kolotnev.formattedittext.MaskedEditText
            android:id="@+id/etTelephone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_licence_plate"
            app:mask="0999999999"
            app:placeholder="_" />

        <!--        <EditText-->
        <!--            android:id="@+id/etTelephone"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:gravity="center"-->
        <!--            android:digits="0123456789"-->
        <!--            android:inputType="phone"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/guideline"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/editText_add_licence_plate" />-->

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="etTelephone,tvTel" />

        <ImageView
            android:id="@+id/imageView_add_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="centerCrop"
            android:src="@null"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bFields"
            tools:layout_conversion_absoluteHeight="565dp"
            tools:layout_conversion_absoluteWidth="392dp" />

        <ImageView
            android:id="@+id/imageView_add_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="centerCrop"
            android:src="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/bFields"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="392dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="imageView_add_first,imageView_add_second" />

        <RadioButton
            android:id="@+id/radioButton_image_first"
            style="@style/TextView.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:text="@string/label_registration_book_front"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bImages" />

        <RadioButton
            android:id="@+id/radioButton_image_second"
            style="@style/TextView.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_registration_book_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/bImages" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="radioButton_image_first,radioButton_image_second" />

        <Button
            android:id="@+id/button_add_take_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/label_capture_photo"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bRadioButtons" />

        <Button
            android:id="@+id/button_add_choose_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/label_choose_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/bRadioButtons" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="button_add_choose_image,button_add_take_photo" />

        <com.opensooq.pluto.PlutoView
            android:id="@+id/isImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:indicator_visibility="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bButtons" />

        <Button
            android:id="@+id/btnPickImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vybrať ďalšie fotografie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/isImages" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_add_record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPickImages" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>